k8s/apps/security/oauth2-proxy/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth
  namespace: security
spec:
  hosts:
    - 'oauth.${SECRET_LOCAL_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: oauth2-proxy.security.svc.cluster.local
